# SpeechtoText

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  main.py
app/api/: dependencies.py  routes.py
app/db/: repository.py
app/models/: __init__.py  schemas.py
app/services/: asr_client.py  formatting.py  jobs.py  media.py  storage.py
app/workers/: runner.py
scripts/: start_service.ps1  stop_service.ps1
tests/: test_app.py
