[project]
name = "speech-to-text-service"
version = "0.1.0"
description = "Local async transcription service on top of a Qwen3-ASR OpenAI-compatible endpoint."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
stt = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
